DoanhHN - update view

--- a/170516/Views/Administrator/ViewSupplier.cshtml
+++ b/170516/Views/Administrator/ViewSupplier.cshtml
@@ -12,7 +12,7 @@
                     <li class="active">Quản lý nhà cung cấp</li>
                 </ol>
                 <div class="container-fluid admin-header">
-                    <div class="title col-md-6 col-xs-6"><h3>Danh Sách Sản Phẩm</h3></div>
+                    <div class="title col-md-6 col-xs-6"><h3>Danh Sách Nhà cung cấp</h3></div>
                     <div class="col-md-6 col-xs-6">
                         <a id="addBtn" href="@Url.Action("AddSupplier", "Administrator")" class="btn btn-primary btn-sm add-button"><i class="glyphicon glyphicon-plus"></i> Thêm</a>
                     </div>
