--- a/170516/Views/Product/ViewCategory.cshtml
+++ b/170516/Views/Product/ViewCategory.cshtml
@@ -54,7 +54,7 @@
                 </div>
                 <div class="product-grid">
 
-                    for (var i = 0; i < Model.MenuOnMainPage.Count; i++)
+                    @for (var i = 0; i < Model.MenuOnMainPage.Count; i++)
                     {
                     <div class="product-wrapper">
                         <div class="product-row clearfix">
