--- a/170516/Views/Administrator/ViewProduct.cshtml
+++ b/170516/Views/Administrator/ViewProduct.cshtml
@@ -182,7 +182,15 @@
                     </div>
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="dataTables_info" role="status" aria-live="polite">Hiển thị từ @Model.StartIndex tới @Model.EndIndex trong @Model.TotalNumber sản phẩm</div>
+                            @if (Model.EndIndex > Model.TotalNumber)
+                            {
+                                <div class="dataTables_info" role="status" aria-live="polite">Hiển thị từ @Model.StartIndex tới @Model.TotalNumber trong @Model.TotalNumber sản phẩm</div>
+                            }
+                            else
+                            {
+                                <div class="dataTables_info" role="status" aria-live="polite">Hiển thị từ @Model.StartIndex tới @Model.EndIndex trong @Model.TotalNumber sản phẩm</div>
+                            }
+                            
                         </div>
                         <div class="col-sm-6">
                             <div class="dataTables_paginate">
