DoanhHN - commit email part1

--- a/170516/Views/Administrator/ViewRequestDetail.cshtml
+++ b/170516/Views/Administrator/ViewRequestDetail.cshtml
@@ -107,7 +107,7 @@
                         <div class="row">
                             <!-- DESCRIPTION -->
                             <div class="form-group col-sm-12 add-product-description" style="margin-left:2px;">
-                                <textarea class="tiny_mce_input" type="file" id="ReplyContent" name="ReplyContent" style=" width 100%;"></textarea>
+                                <textarea class="tiny_mce_input" type="file" id="ReplyContent" name="ReplyContent" style=" width: 100%;"></textarea>
                             </div>
                         </div>
                         <div class="row">
