--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -111,7 +111,9 @@
             addUser: "@Url.Action("AddUser", "Administrator")",
             updateUser: "@Url.Action("UpdateUser", "Administrator")",
             changeUserStatus: "@Url.Action("ChangeUserStatus", "Administrator")",
-            answerRequest: "@Url.Action("AnswerRequest","Administrator")"
+            answerRequest: "@Url.Action("AnswerRequest","Administrator")",
+
+            addEmailTemplate: "@Url.Action("AddEmailTemplate","Administrator")"
         };
 
         var sampleRegex = {
